--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             overflow-y: hidden ! important;
             overflow-x: hidden ! important;
             background-color: #f8f8f8;
-            background-image: url('bg.png');
+            background-image: url('./bg.png');
             background-size: cover;
             /* background-size: contain; */
             background-repeat: no-repeat;
