--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-size: cover;
             /* background-size: contain; */
             background-repeat: no-repeat;
-            /* background-position: right; */
+            background-position: center top;
 
         }
     </style>
