--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             background-repeat: no-repeat;
             background-position: center top;
 
+            /* Media query for smaller screens (e.g., mobile devices) */
+            @media (max-width: 767px) {
+                body {
+                    background-position: center center; /* Adjust this line */
+                }
+            }
+            
         }
     </style>
 
