--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             background-size: cover;
             /* background-size: contain; */
             background-repeat: no-repeat;
-            background-position: center top;          
+            background-position: center top;
+            background-attachment: fixed;
         }
         /* Media query for smaller screens (e.g., mobile devices) */
         @media (max-width: 767px) {
