--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             }
         }
     </style>
-
+    <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/9ba5a070-f259-4e98-a7c6-8e13dff26e19/webchat/config.js" defer></script>
 </head>
 
 
